--- a/Proyecto3/index.html
+++ b/Proyecto3/index.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Otomanopee+One&family=Roboto&family=Rock+Salt&family=Yomogi&display=swap" rel="stylesheet">
 <!--CSS-->
         <link rel="stylesheet" href="CSS/estilo.css">
-        <title>Pilla Curioso</title>
+        <title>Pilla Curioso (ESTA ES LA MODIFICACION QUE REALICE)</title>
 <!--SEO-->
         <meta name="description" content="Somos un local de ropa y accesorios para bebes y niños de 0 a 5 años">
         <meta name="keywords"  content="Ropa, Niños, Niñas, Bebes, Moda, Ropa bebe"> 
